refactor(scene): replace colon-delimited ids (Refs #119)

--- a/plan/112.md
+++ b/plan/112.md
@@ -23,7 +23,7 @@
 ## 要件詳細
 
 ### 1. クエリパラメータ仕様
-- `scene=<SceneId>`: `SceneDefinition` で定義済みの ID を受け入れる（例: `triangle:regular-hexagon`）。値はホワイトリスト方式でバリデーション。
+- `scene=<SceneId>`: `SceneDefinition` で定義済みの ID を受け入れる（例: `euclidean-regular-hexagon`）。値はホワイトリスト方式でバリデーション。
 - `embed=1`（または `mode=embed`）: 埋め込みビューを有効化。将来拡張を見据えて布石を残す。
 - オプション: `depth`, `geometry`, `n` など既存 UI で設定可能な値は将来的な対応余地として設計書に明記（今回の実装は `scene` と `embed` を優先）。
 - クエリはページ初期化時に読み取り、`history.replaceState` / `pushState` を利用して UI 操作後も URL と状態を同期する。
