refactor(scene): reorganize geometry variants (Refs #119)

--- a/plan/109.md
+++ b/plan/109.md
@@ -30,7 +30,7 @@
    - 中心=原点、半径は既存ヒンジシーンと同スケールを再利用。
    - 頂点ごとに `controlPointId` を割り当て、隣接半平面に循環参照させるモデルを確立。
 2. **SceneDefinition への統合**
-   - `TriangleSceneHost` で新ユーティリティを利用する `squareSceneDefinition` を追加。
+   - `EuclideanSceneHost` で新ユーティリティを利用する `squareSceneDefinition` を追加。
    - `SceneRegistry` が 4 頂点シーンを一覧に含め、UI から選択可能にする。
 3. **ドラッグ挙動の検証と補強**
    - `updateControlPoint` / `euclideanHalfPlaneDrag` が共有頂点に対応しているか確認し、必要なら `recalculateAdjacentHalfPlanes` を追加実装。
