--- a/plan/112.md
+++ b/plan/112.md
@@ -43,7 +43,7 @@
 - 不正 ID の場合はデフォルトシーンにフォールバックし、可能ならトーストもしくはデバッグログで通知。
 
 ### 5. 状態管理 & ナビゲーション
-- React 側では `useEffect` を用いて初期マウント時にクエリ解析。`TriangleSceneHost` の `activeSceneId` 初期値に反映。
+- React 側では `useEffect` を用いて初期マウント時にクエリ解析。`EuclideanSceneHost` の `activeSceneId` 初期値に反映。
 - シーン切替/埋め込みモード解除時にクエリも更新し、リロードしても状態が維持されるようにする。
 - `embed` モード時は Euclidean/Hyperbolic 切替操作を無効化 or 常に URL 指定のジオメトリを使用する設計に。仕様どおり UI を非表示にするならデフォルトで disable。
 
